--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -516,7 +516,8 @@ image::ResolveAltClassDiagram.png[]
 ** Pros:
 *** User can specify whether to resolve single or multiple appeals with fewer keywords.
 ** Cons:
-***
+*** Harder to implement as the mass resolve command Parser will have to parse the inputs for different resolve types.
+*** User prone to input mistakes while performing mass resolve.
 
 //end::resolve[]
 
