--- a/docs/team/belbel98.adoc
+++ b/docs/team/belbel98.adoc
@@ -102,3 +102,5 @@ They showcase my ability to write technical documentation and the technical dept
 include::../DeveloperGuide.adoc[tag=insession]
 
 include::../DeveloperGuide.adoc[tag=outSession]
+
+include::../DeveloperGuide.adoc[tag=partcommands]
