--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -30,11 +30,12 @@ The intended audience of this document includes the developers and software test
 
 Note the following symbols and formatting used in this document
 
+NOTE:  This symbol indicates important information
+
 [horizontal]
 
-NOTE:: This symbol indicates important information.
-
-`command`:: A grey highlight (called a mark-up) indicates that this is a command that can be typed into the command line and executed by the application.
+`command`:: A grey highlight (called a mark-up) indicates that this is a command that can be typed into the command
+line and executed by the application.
 
 `[green]#component#`:: Green text with grey highlight indicates a component, class, object or method in the architecture of the application.
 
